--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ esp-idf-hal = "0.43.1"
 anyhow = "1.0.82"
 embedded-svc = "0.27.1"
 serde = "1.0.197"
+toml-cfg = "=0.1.3"
 
 [build-dependencies]
 embuild = "0.31.3"
